# carraf

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: carraf.h
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  cpp_c2c.cpp  ordering.cpp
